# MultiAgentCourse

Assignment1/backend/: .dockerignore  .env.example  .gitignore  API_ENDPOINTS.md  DEPLOYMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  FILE_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PHASE2_IMPLEMENTATION.md  PHASE2_SUMMARY.md  PHASE3_COMPLETION_REPORT.md  PHASE3_IMPLEMENTATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_PHASE3.md  SECURITY.md  docker-compose.yml  ollama-web-backend.service  ollama_web.db-shm  ollama_web.db-wal  pyproject.toml  pytest.ini  requirements.txt  run.py  test_api.sh
Assignment1/backend/.github/workflows/: tests.yml
Assignment1/backend/app/: __init__.py  config.py  database.py  main.py
Assignment1/backend/app/middleware/: auth.py  error_handler.py  rate_limiter.py  security.py
Assignment1/backend/app/models/: __init__.py  conversation.py  message.py  setting.py  user.py
Assignment1/backend/app/routes/: __init__.py  auth.py  chat.py  config.py  conversations.py  export.py  health.py  models.py  prompts.py
Assignment1/backend/app/schemas/: __init__.py  auth.py  chat.py  config.py  conversation.py  export.py  models.py  prompts.py
Assignment1/backend/app/services/: ollama_client.py
Assignment1/backend/app/utils/: auth.py  backup.py  exceptions.py  logging.py  metrics.py  migrations.py  (+1 more)
Assignment1/backend/scripts/: backup_db.py  run_migrations.py
Assignment1/backend/tests/: __init__.py  conftest.py  test_exceptions.py  test_health.py  test_integration.py  test_rate_limiter.py  test_validation.py
(+270 files in other folders)
